--- a/Desafio 2/emissor-ms/src/main/resources/application.properties
+++ b/Desafio 2/emissor-ms/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 #Alterar dados do servidor de e-mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gneivamachado@gmail.com 
-spring.mail.password=lbll zyfe ehmg avks
+spring.mail.username=email@gmail.com 
+spring.mail.password=senha_aplicativo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
